fix alignment of intro

--- a/css/styles.css
+++ b/css/styles.css
@@ -67,6 +67,7 @@ a:hover {
   background-repeat: no-repeat;
   background-size: cover;
   background-position: center;
+  text-align: center;
 }
 
 .intro {
